change the website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
         {% endfor %}
 
         <!-- CV link -->
-        <a class="page-link" target="_blank" href="{{ '/assets/pdf/CV_FJL526.pdf' | prepend: site.baseurl | prepend: site.url }}">vitae</a>
+        <a class="page-link" target="_blank" href="{{ '/assets/pdf/CV_FJL.pdf' | prepend: site.baseurl | prepend: site.url }}">vitae</a>
       </div>
     </nav>
 
